MDEV-31256 fil_node_open_file() releases fil_system.mutex allowing other thread to open its file node

Quick fix without mtr test case.